<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="showListViewModel"
            type="com.example.shoeapp.ShoeListViewModel" />
    </data>
<!--
using constrainlayout as its dynamic and good for landscape
-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@id/desc_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/cancel"
            android:layout_marginEnd="16dp"
            style="@style/button_style" />

        <Button
            android:id="@+id/save_button"
            style="@style/button_style"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc_label" />



        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:hint="@string/name"

        android:outlineAmbientShadowColor="@color/brown"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name"
                android:text="@{showListViewModel.name}"
                style="@style/edit_text_style"

                />


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/company_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:hint="@string/company"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/company_edit"
                android:text="@{showListViewModel.company}"
                style="@style/edit_text_style" />


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/size_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/company_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:hint="@string/size"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/size_edit"
                android:text="@{showListViewModel.size}"
                style="@style/edit_text_style" />


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/desc_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/size_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:hint="@string/description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/desc_edit"
                android:text="@{showListViewModel.description}"
                style="@style/edit_text_style" />


        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>