<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="shoeIteModel"
            type="com.example.shoeapp.Shoe" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    >


    <TextView
        android:id="@+id/name_label"
        style="@style/text_list_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintEnd_toStartOf="@+id/Name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Name"
        style="@style/text_list_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/name_label"
        app:layout_constraintTop_toTopOf="@+id/name_label" />

    <TextView
        android:id="@+id/company_label"
        style="@style/text_list_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/company"
        app:layout_constraintEnd_toStartOf="@+id/Company"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_label" />

    <TextView
        android:id="@+id/Company"
        style="@style/text_list_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/company"
        app:layout_constraintBottom_toBottomOf="@+id/company_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/company_label"
        app:layout_constraintTop_toTopOf="@+id/company_label" />

    <TextView
        android:id="@+id/size_label"
        style="@style/text_list_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/size"
        app:layout_constraintEnd_toStartOf="@+id/Size"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/company_label" />

    <TextView
        android:id="@+id/Size"
        style="@style/text_list_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/size"
        app:layout_constraintBottom_toBottomOf="@+id/size_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/size_label"
        app:layout_constraintTop_toTopOf="@+id/size_label" />

    <TextView
        android:id="@+id/desc_label"
        style="@style/text_list_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintEnd_toStartOf="@+id/Description"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/size_label" />

    <TextView
        android:id="@+id/Description"
        style="@style/text_list_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintBottom_toBottomOf="@+id/desc_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/desc_label"
        app:layout_constraintTop_toTopOf="@+id/desc_label" />



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>